--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "preact-music-player",
   "private": true,
   "version": "0.0.0",
+  "main": "electron/index.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "concurrently \"electron .\" \"vite\""
   },
   "dependencies": {
+    "find": "^0.3.0",
+    "flatlist-react": "^1.5.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
+    "music-metadata": "^7.12.2",
     "preact": "^10.5.15",
     "react-icons": "^4.3.1"
   },
@@ -18,6 +23,8 @@
     "@rollup/plugin-eslint": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "concurrently": "^7.0.0",
+    "electron": "^17.1.2",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
