--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "find": "^0.3.0",
-    "flatlist-react": "^1.5.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "music-metadata": "^7.12.2",
     "preact": "^10.5.15",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
     "@rollup/plugin-eslint": "^8.0.1",
+    "@types/react-virtualized": "^9.21.20",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "concurrently": "^7.0.0",
