--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "electron:dev": "concurrently \"electron .\" \"vite\""
   },
   "dependencies": {
+    "@brecert/flakeid": "^2.0.1",
     "find": "^0.3.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "music-metadata": "^7.12.2",
+    "node-vibrant": "^3.2.1-alpha.1",
     "preact": "^10.5.15",
     "react-icons": "^4.3.1",
-    "react-virtualized": "^9.22.3"
+    "react-virtualized": "^9.22.3",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
